# moin2hugo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
moin2hugo/: __init__.py  cli.py  config.py  formatter.py  hugo_utils.py  moin2hugo.py  moin_parser.py  moin_settings.py  moin_site_config.py  moin_site_scanner.py  moinutils.py  page_builder.py  page_tree.py  path_builder.py  utils.py
moin2hugo/formatter/: __init__.py  base.py  hugo.py  hugo_utils.py
moin2hugo/moin_parser_extensions/: __init__.py  base.py  csv.py  highlight.py
moin2hugo/path_builder/: __init__.py  hugo.py
moin2hugo/templates/: page.tmpl
moin2hugo/tests/: conftest.py  test_config.py  test_hugo_formatter.py  test_hugo_path_builder.py  test_hugo_utils.py  test_moin2hugo.py
moin2hugo/tests/convert_syntax/: test_abnormal_cases.py  test_general_stuff.py  test_heading_and_rule.py  test_link_and_transclusion.py
moin2kibun/: cli.py  config.py  formatter.py  moin2kibun.py  path_builder.py
moin2kibun/templates/: page.tmpl
moin2kibun/tests/: conftest.py  test_config.py  test_formatter.py  test_path_builder.py
moin2kibun/tests/convert_syntax/: test_abnormal_cases.py  test_codeblock_parser.py  test_decoration.py  test_general_stuff.py  test_heading_and_rule.py  test_itemlist.py  test_link_and_transclusion.py  test_table.py
moin2x/: config.py  formatter_base.py  moin2x.py  moin_parser.py  moin_settings.py  moin_site_scanner.py  moinutils.py  page_builder.py  page_tree.py  path_builder.py  utils.py
moin2x/formatter/: base.py  markdown.py
moin2x/formatter/utils/: markdown.py  markdown_table.py  smiley2emoji.py
moin2x/moin_parser_extensions/: __init__.py  base.py  csv.py  highlight.py
moin2x/tests/: test_moin_parser_helpers.py  test_page_tree.py  test_utils.py
moin2x/tests/convert_syntax/: test_codeblock_parser.py  (+2 more)
tests/: conftest.py  test_config.py  test_formatter.py  test_hugo_formatter.py  test_hugo_path_builder.py  test_hugo_utils.py  test_moin2hugo.py  test_moin_parser_helpers.py  test_moin_parser_replace.py  test_moin_site_scanner.py  test_moinutils.py  test_page_tree.py  test_utils.py
tests/convert_syntax/: conftest.py  test_abnormal_cases.py  test_codeblock_parser.py  test_decoration.py  test_general_stuff.py  test_heading_and_rule.py  test_itemlist.py  test_link_and_transclusion.py  test_table.py
(+17 files in other folders)
