[tool.poetry]
name = "moin2hugo"
version = "0.1.0"
description = ""
authors = ["Wataru Watanabe <wataru.chocola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^20.3.0"
pydantic = "^1.8.1"
click = "^7.1.2"
PyYAML = "^5.4.1"
Pygments = "^2.8.1"
cssutils = "^2.2.0"
Jinja2 = "^2.11.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pytest-randomly = "^3.5.0"
pre-commit = "^2.12.1"
black = "^21.4b2"
isort = {extras = ["pyproject"], version = "^5.8.0"}

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.poetry.scripts]
moin2hugo = "moin2hugo.moin2hugo:convert_site"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
