[tool.poetry]
name = "moin2hugo"
version = "0.1.0"
description = ""
authors = ["Wataru Watanabe <wataru.chocola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^23.1.0"
pydantic = "^2.4.2"
click = "^8.1.7"
PyYAML = "^6.0.1"
Pygments = "^2.8.1"
cssutils = "^2.2.0"
Jinja2 = "^3.1.2"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-randomly = "^3.15.0"
black = "^23.10"
isort = {extras = ["pyproject"], version = "^5.8.0"}
types-pyyaml = "^6.0.12.12"
flake8 = "^6.1.0"
pyright = "^1.1.334"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.poetry.scripts]
moin2hugo = "moin2hugo.cli:convert_site"
moin2kibun = "moin2kibun.cli:convert_site"

[tool.poe.tasks]
test = "pytest moin2x/ moin2hugo/ moin2kibun/"
typecheck = "pyright"

[tool.pyright]
include = ["moin2hugo", "tests"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
